  the gui are now inside the settings.

Bugfixes:

- typo devive -> device (fixed).
- error inside OSRemoveLock by startup (fixed).
- GUIInfo had a few refrences with the old parameter-count 1
---------------------------------------------------------------------------------------------------
Date : 07.14.2010 | Release : 0.6C-A10   | Author  : H.Weber | CVS:138-153
---------------------------------------------------------------------------------------------------

Changes:

- Changed logic behind the job-window because the lock-file deletion.
- Added ssh-command test inside expert-mode.
- Addes transcode bluray confirmend inside exper-mode.
- Added tracklist for bluray
- Added selection for destination-directory
- Added edit export-name
- Send back modified bluray paramters to OS-Part
- Added a parameter to OSBlurayExecuteList

Bugfixes:

- After a sucessful process the directory progress will be erased.
  This change was made inside all shell-scripts.
- Fixed type-error inside OSRemoveLock (fixed)
- By a few runs with bluray-chapter.sh I had sometimes not the 
  correct tracklist from bluray. (fixed)
 
---------------------------------------------------------------------------------------------------
Date : 07.17.2010 | Release : 0.6C-A10   | Author  : H.Weber | CVS:154-
---------------------------------------------------------------------------------------------------

Changes:

- Added Transcode inside expert-mode.
- Added ISO copy inside expert-mode.
- Added Rescue-copy inside expert-mode. 
- Added shell-script dvd-atrack.sh
- Addes shell-script dvd-rescue.sh 

Bugfixes:

- Secound error inside OSRemoveLock. (fixed)
- Timeout Value for Bluray fixed.
- problem with reading track list audio and subtitle (fixed)
- Testing addon against Dharma-freezed code.
- fixed a few small errors on the way to ALPHA-10 

---------------------------------------------------------------------------------------------------

















