@@ -11,7 +11,7 @@
 # parameters :                                            #
 # $1 device                                               #
 # $2 directory for rip                                    #
-# $3 iso-name (excluding extension iso                    #
+# $3 iso-name (excluding extension iso)                   #
 #                                                         #
 # description :                                           #
 # generates a iso file of a dvd                           #
@@ -131,7 +131,7 @@ sleep 3
 
 echo $1 > $JOBFILE
 echo 1 > ~/.xbmc/userdata/addon_data/script-video-ripper/progress/stages-counter
-echo 32154 > ~/.xbmc/userdata/addon_data/script-video-ripper/progress/stages-descriptions
+echo 32155 > ~/.xbmc/userdata/addon_data/script-video-ripper/progress/stages-descriptions
 echo 1 > ~/.xbmc/userdata/addon_data/script-video-ripper/progress/stages-current
 echo -n $2/$3.iso > ~/.xbmc/userdata/addon_data/script-video-ripper/progress/progress-files
 echo $$ > ~/.xbmc/userdata/addon_data/script-video-ripper/progress/progress-pid
